hello-openshift/openshift-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: hello-openshift
spec:
  to:
    kind: Service
    name: hello-openshift
  port:
    targetPort: 8080
  tls:
    termination: edge
